<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/wallpaper4"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:gravity="center_horizontal">

        <TextView
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="12dp"
            android:text="Register your Parking Detail"

            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>


    <EditText
        android:id="@+id/pknameid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:background="#3BB9FF"
        android:textColorHint="#fff"
        android:paddingLeft="10dp"
        android:hint="@string/parkingname"
        />
    <EditText
        android:id="@+id/addid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#3BB9FF"
        android:textColorHint="#fff"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:hint="@string/Address"
        />
    <EditText
        android:id="@+id/capid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#3BB9FF"
        android:textColorHint="#fff"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:hint="@string/carcapacity"
        />
    <EditText
        android:id="@+id/rentid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#3BB9FF"
        android:textColorHint="#fff"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:hint="@string/rent"
        />
    <EditText
        android:id="@+id/mobileid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#3BB9FF"
        android:textColorHint="#fff"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:hint="@string/mobilenumber"
        />
    <EditText
        android:id="@+id/otimeid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#3BB9FF"
        android:textColorHint="#fff"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:hint="@string/openingtime"
        />
    <EditText
        android:id="@+id/ctimeid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="#3BB9FF"
        android:textColorHint="#fff"
        android:paddingLeft="10dp"
        android:hint="@string/closingtime"
        />
    <Button
        android:id="@+id/regbtnid"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginTop="25dp"
        android:background="#ff2400"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/register"

        />

</LinearLayout>